--- a/backEnd/src/main/resources/application.properties
+++ b/backEnd/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.data.mongodb.uri= {mongoDBseverUrl}
-spring.data.mongodb.database={databaseName}
+spring.data.mongodb.uri= mongodb+srv://gaurav965:mh19aa1200@cluster0.yf5l2.mongodb.net/test?retryWrites=true&w=majority
+spring.data.mongodb.database=test
 server.port=9090
 
 #JWT properties 
